--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <div class="card">
       <div class="header">
         <h1><i class="fas fa-ticket-alt"></i> Ticket Analytics Dashboard</h1>
-        <p>Track and analyze ticket performance metrics</p>
+        <p>Made By Swampod Sarkar</p>
       </div>
 
       <div class="input-grid">
